<resources>
    <string name="app_name">Task Follower</string>
    <string name="model">Model</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="dummy_model">Task Name</string>
    <string name="dummy_price">40 min</string>
    <string name="dummy_category">some category</string>
    <string name="seats">Seats</string>
    <string name="state">State</string>
    <string name="release_date">Release Date</string>
    <string name="dummy_seats">4</string>
    <string name="dummy_state">New</string>
    <string name="dummy_date">12/12/24</string>
    <string name="category_value">Category Value</string>
    <string name="dummy_category_value">1020 GHz</string>
    <string name="there_is_no_elements_to_show_please_add_some">There are no elements to show. Please add some</string>
    <string name="is_a_progress_clock">Is a progress clock?</string>
    <string name="assigned_time">Assigned Time</string>
    <string name="invalid_name">Write a non empty name</string>
    <string name="invalid_time">Your time has to be grater than zero</string>
    <string-array name="state_car">
        <item>Sleeping</item>
        <item>Working</item>
        <item>Eating</item>
        <item>Gaming</item>
        <item>Reading</item>
    </string-array>
</resources>