<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdH33"
        app:layout_constraintGuide_percent=".33"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdH66"
        app:layout_constraintGuide_percent=".66"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdV1"
        app:layout_constraintGuide_percent=".25"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdV2"
        app:layout_constraintGuide_percent=".5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdV3"
        app:layout_constraintGuide_percent=".75"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etModel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/dummy_model"
        android:textColor="@color/black"
        android:textColorHint="@color/blackOverlay"
        android:fontFamily="@font/montserrat_regular"
        android:maxLines="1"
        android:gravity="center"
        android:textSize="14sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintStart_toEndOf="@id/gdH33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gdV1"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPrice"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:hint="@string/dummy_price"
        android:textColor="@color/black"
        android:textColorHint="@color/blackOverlay"
        android:fontFamily="@font/montserrat_regular"
        android:maxLines="1"
        android:gravity="center"
        android:textSize="14sp"
        android:inputType="number"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintTop_toBottomOf="@id/gdV1"
        app:layout_constraintStart_toEndOf="@id/gdH33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gdV2"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sCategory"
        style="@style/customDropDownTilStyle"
        android:layout_width="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@id/gdV1"
        app:layout_constraintEnd_toStartOf="@id/gdH33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:spinnerMode="dialog">

        <AutoCompleteTextView
            android:id="@+id/my_spinner_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:hint="Icon"
            android:gravity="center"
            app:autoSizeMaxTextSize="16sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeTextType="uniform"
            app:autoSizeStepGranularity="1sp"
            android:fontFamily="@font/montserrat_regular"
            android:maxLines="1"
            android:focusable="false"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbPrice"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/assigned_time"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:maxLines="1"
        android:gravity="center"
        android:textSize="14sp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintTop_toBottomOf="@id/gdV1"
        app:layout_constraintEnd_toStartOf="@id/gdH33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/gdV2"/>


    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkCounter"
        android:layout_width="40dp"
        android:layout_height="40dp"
        style="@style/myCheckBoxTheme"
        app:layout_constraintTop_toBottomOf="@id/gdV2"
        app:layout_constraintEnd_toStartOf="@id/gdH33"
        app:layout_constraintBottom_toTopOf="@+id/gdV3"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lbCounterCheck"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:text="@string/is_a_progress_clock"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_bold"
        android:maxLines="1"
        android:gravity="center_vertical"
        android:textSize="14sp"
        android:layout_marginStart="8dp"
        app:autoSizeMaxTextSize="16sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:autoSizeStepGranularity="1sp"
        app:layout_constraintTop_toBottomOf="@id/gdV2"
        app:layout_constraintStart_toEndOf="@id/gdH33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/gdV3"/>

    <ImageView
        android:id="@+id/btnDelete"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/ic_delete"
        app:tint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/gdV3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gdH33"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/btnDiscard"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_close"
        app:tint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/gdV3"
        app:layout_constraintStart_toEndOf="@id/gdH33"
        app:layout_constraintEnd_toStartOf="@id/gdH66"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/btnAdd"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_done"
        app:tint="@color/green"
        app:layout_constraintTop_toBottomOf="@id/gdV3"
        app:layout_constraintStart_toEndOf="@id/gdH66"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</merge>

